# contract-review-env

./: Dockerfile  README.md  app.py  grader.py  inference.py  openenv.yaml  pyproject.toml  tasks.py
contract_review_env_pkg/: env.py  tasks.py
server/: __init__.py  app.py  main.py
