[project]
name = "contract-review-env"
version = "0.1.0"
description = "Contract Review AI Environment"
authors = [
    {name = "Anushka"}
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.2.0"
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
