[project]
name = "contract-review-env"
version = "0.1.0"
description = "Contract Review AI Environment"
authors = [{ name = "Anushka" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.2.0"
]

[project.scripts]
start = "uvicorn app:app --host 0.0.0.0 --port 7860"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
