# pyproject.toml
[project]
name = "contract-review-env"
version = "0.1.0"
description = "Contract Review AI Environment"
authors = [{ name = "Anushka" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
server = "server.main:serve"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "contract_review_env_pkg*"]
